--- a/.github/ISSUE_TEMPLATE/hotbug_report.yml
+++ b/.github/ISSUE_TEMPLATE/hotbug_report.yml
@@ -7,7 +7,7 @@ assignees:
 body:
   - type: markdown
     attributes:
-      value: 
+      value: インシデント内容を正確に登録ください
   - type: dropdown
     id: type
     attributes:
