--- a/.github/ISSUE_TEMPLATE/hotbug_report.yml
+++ b/.github/ISSUE_TEMPLATE/hotbug_report.yml
@@ -99,6 +99,7 @@ body:
     attributes:
       label: 関連イシュー
       description: "description"
-      value: "dummy value"
+      value: >
+### 関連イシューのURL:
     validations:
       required: false
