--- a/.github/ISSUE_TEMPLATE/hotbug_report.yml
+++ b/.github/ISSUE_TEMPLATE/hotbug_report.yml
@@ -99,7 +99,6 @@ body:
     attributes:
       label: 関連イシュー
       description: "description"
-      value: |
-### 関連イシューのURL:
+      value: "### 関連イシューのURL:"
     validations:
       required: false
