--- a/.github/ISSUE_TEMPLATE/hotbug_report.yml
+++ b/.github/ISSUE_TEMPLATE/hotbug_report.yml
@@ -70,16 +70,16 @@ body:
       label: 概要
       description: "description"
       value: |
-### 現在の動作:
+        ### 現在の動作:
 
-### 期待する動作:
+        ### 期待する動作:
 
-### 発生した手順:
+        ### 発生した手順:
 
-### 環境(デバイス, OS, ブラウザ):
+        ### 環境(デバイス, OS, ブラウザ):
 
-### その他:
-      
+        ### その他:
+
     validations:
       required: true
   - type: dropdown
@@ -110,7 +110,7 @@ body:
       label: 関連イシュー
       description: "description"
       value: |
-### 現在の動作:
+        ### 関連イシューのURL:
 
     validations:
       required: false
