--- a/.github/ISSUE_TEMPLATE/hotbug_report.yml
+++ b/.github/ISSUE_TEMPLATE/hotbug_report.yml
@@ -1,4 +1,4 @@
-name: イシュー
+name: インシデント
 description: "インシデントを登録します"
 title: "[sgs] "
 labels: ["sgs"]
@@ -12,7 +12,7 @@ body:
     id: type
     attributes:
       label: 種別
-      description: "description"
+      description: 
       options:
         - 不具合
         - 要望
@@ -23,7 +23,7 @@ body:
     id: status
     attributes:
       label: ステータス
-      description: "description"
+      description: 
       options:
         - 新規
         - 着手中
@@ -40,7 +40,7 @@ body:
     id: functions
     attributes:
       label: 機能
-      description: "description"
+      description: 
       options:
         - label: 代理店選択
         - label: 申込
@@ -55,7 +55,7 @@ body:
     id: users
     attributes:
       label: ユーザー
-      description: "description"
+      description: 
       options:
         - label: 全ユーザー
         - label: 高鷲スノーパーク
@@ -68,7 +68,7 @@ body:
     id: what-happened
     attributes:
       label: 概要
-      description: "description"
+      description: 
       value: |
         ### 現在の動作、発生した手順:
 
@@ -84,29 +84,29 @@ body:
     id: urgency
     attributes:
       label: 緊急度
-      description: "description"
+      description: 
       options:
-        - 高 (当日中に対応)
-        - 中 (週末までに対応)
         - 低 (順次対応)
+        - 中 (週末までに対応)
+        - 高 (当日中に対応)
     validations:
       required: true
   - type: dropdown
     id: importance
     attributes:
       label: 重要度
-      description: "description"
+      description: 
       options:
-        - 高 (営業に支障あり)
-        - 中
         - 低 (軽微な問題)
+        - 中
+        - 高 (営業に支障あり)
     validations:
       required: true
   - type: textarea
     id: related
     attributes:
       label: 関連インシデント
-      description: "description"
+      description: 
       value: |
         ### 関連インシデントのURL:
 
